<resources>
    <string name="app_name">SportStats</string>
    <string name="editBox">Click to edit</string>
    <string name="RecordPrompt">Record Game</string>
    <string name="returnToMainMenu">Main Menu</string>
    <string name="PlayerPrompt">Player Stats</string>
    <string name="GamePrompt">View Game Stats</string>
    <string name="PictureDiscription">Image of a Basketball Court</string>
    <string name="StartGamePrompt">Done</string>
    <string name="benchLabel">Bench</string>
    <string name="onCourtLabel">Court</string>
    <string name="creditsOutput">This app is presented to you by: \nJandL SportsStats Production Company</string>


    <string name="shotMadeLabel">Shot Made</string>
    <string name="Point3MadeLabel">3-Point Made</string>
    <string name="foulShotMadeLabel">Foul Shot Made</string>
    <string name="PersonFoulLabel">Personal Foul</string>

    <string name="shotAttemptedLabel">Shot Attempted</string>
    <string name="point3AttemptedLabel">3-Point Attempted</string>
    <string name="foulShotAttemptedLabel">Foul Shot Attempted</string>
    <string name="techFoulLabel">Tech Foul</string>
    <string name="minutePrompt">Enter the number of minutes per quarter</string>

    <string name="negativeLabel">Negative</string>
    <string name="addOppScoreLabel">+1 To Opp Score</string>
    <string name="sortBenchPrompt">Keep bench and court sorted</string>
    <string name="playerFouls">Player # Fouls:</string>
    <string name="playerPM">Player +/-:</string>
    <string name="ourScore">Our Score:</string>
    <string name="oppScore">Opp Score:</string>
    <string name="ourTeamFouls">Our Team Fouls:</string>
    <string name="endGamePrompt">End Game</string>
    <string name="gameHistoryFilename">pastGames</string>
    <string name="selectGame">Done</string>
    <string name="creditsLabel">Credits</string>
    <string name="title_activity_splash_screen">SportsStats</string>
    <string name="companyName">JandL SportsStats Production Company presents:</string>
    <string name="logoDescription">Image of a basketball</string>

</resources>
